--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highlight.js": "^11.11.1",
     "marked": "^15.0.7",
     "marked-highlight": "^2.2.1",
+    "mime-types": "^3.0.1",
     "multer": "^1.4.5-lts.2",
     "wu-51ng3": "file:"
   }
